--- a/public/styleoverall.css
+++ b/public/styleoverall.css
@@ -143,3 +143,95 @@ a:hover {
 #createuser {
     margin: 10px;
 }
+
+
+.searchbar {
+    width: 50%;
+    max-height: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+  }
+  
+  #search {
+    display: flexbox;
+    background-color: none;
+    background-image: url("/img/loop.png");
+    background-size: 15px;
+    background-repeat: no-repeat;
+    background-position: 7px;
+    border-radius: 30px;
+    border: 1px solid transparent;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.1);
+    max-height: 50%;
+    width: 90%;
+    margin: 2%;
+    padding-left: 5%;
+  }
+  
+  #search::placeholder {
+    color: rgba(119, 119, 119, 0.472);
+  }
+  
+  input {
+    font-size: 1rem;
+  }
+  
+  .user-cards {
+    display: grid;
+    flex-direction: column;
+    gap: 0.25rem;
+    position: absolute;
+    height: fit-content;
+    width: 45%;
+    top: 38px;
+    z-index: 100;
+  }
+  
+  .card {
+    border: 1px solid black;
+    background-color: white;
+    padding: 0.5rem;
+  }
+  
+  .card > .header {
+    margin-bottom: 0.25rem;
+  }
+  
+  .card > .body {
+    font-size: 0.8rem;
+    color: #777;
+  }
+  
+  .hide {
+    display: none;
+  }
+  
+  #search:focus {
+    background-image: none;
+  }
+
+  .modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  
+  .modal-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+  }
+  
+  #modalImg {
+    max-width: 100%;
+  }
