--- a/public/login.css
+++ b/public/login.css
@@ -1,27 +1,71 @@
-#logindiv{
-    display: flex;
-    flex-direction: column;
-    height: 400px;
-    width: 300px;
-    border: 1px solid black;
-    padding: 20px;
-    margin-left: 400px;
-    margin-top: 100px;
+body {
+  font-family: 'Opens Sans', sans-serif;
+  font-weight: 300;
+
 }
 
-.forms{
-    height: auto;
-    width: auto;
-
-    
+#logindiv {
+  display: flex;
+  flex-direction: column;
+  height: 300;
+  width: 300px;
+  border: 1px solid black;
+  border-radius: 10%;
+  padding: 20px;
+  margin: auto;
+  background-color: rgb(32, 32, 108);
+  flex-direction: column;
+  align-items: center;
 }
 
-#heading{
-font-size: 30px;
-font-weight: bold;
+.forms {
+  height: auto;
+  width: auto;
+
+
 }
 
-#wrong{
-    color: red;
+#heading {
+  font-size: 30px;
+  font-weight: bold;
+  color: white;
 }
 
+label[for="password"],
+label[for="username"] {
+  color: white;
+}
+
+.button1 {
+  display: inline-block;
+  padding: 0.35em 1.2em;
+  border: 0.1em solid #FFFFFF;
+  margin: 0 0.3em 0.3em 0;
+  border-radius: 0.12em;
+  box-sizing: border-box;
+  text-decoration: none;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 300;
+  color: #FFFFFF;
+  text-align: center;
+  transition: all 0.2s;
+}
+
+.button1:hover {
+  color: #000000;
+  background-color: #FFFFFF;
+  cursor: pointer;
+
+}
+
+@media all and (max-width: 30em) {
+  a.button1 {
+    display: block;
+    margin: 0.4em auto;
+  }
+}
+
+
+#wrong {
+  color: red;
+}
